--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
 
 <body>
     <div class="greetings">
+        <span>C</span>
         <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span>!</span>
+        <span>i</span>
+        <span>N</span>
+        <span>i</span>
+        <span>T</span>
+        <span>A</span>
     </div>
     <div class="description">
         <span>ESTE DETALLE ES PARA TI :)</span>
